--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Mandalas GUI - Dark Mode KOTS Compat"]
-	path = Mandalas GUI - Dark Mode KOTS Compat
-	url = https://github.com/GLDYM/Mandalas-GUI-KOTS-Compat.git
+[submodule "Mandalas-GUI-KOTS-Compat"]
+	path = Mandalas-GUI-KOTS-Compat
+	url = https://github.com/GLDYM/Mandalas-GUI-KOTS-Compat
