feat(common & client): add mods & change welcome & change opac config to allow trade in claim

--- a/src/overrides/config/immortalers_delight-common.toml
+++ b/src/overrides/config/immortalers_delight-common.toml
@@ -25,7 +25,7 @@ useWeakPoisonOverLay = true
 #true: Always enabled this mode.
 #default: Automatically determine whether to enable it based on the player's combat performance.
 #false: Never enabled this mode.
-powerBattleMode = "default"
+powerBattleMode = "true"
 #After opening, you can right-click to harvest the crops of the module
 rightClickHarvest = true
 
