--- a/src/overrides/kotsconfigs/dimensionviewer-server.toml
+++ b/src/overrides/kotsconfigs/dimensionviewer-server.toml
@@ -10,7 +10,7 @@
 	#    %o - Obfuscated font
 	#    %s - Strikethrough font
 	#    %r - Font reset
-	listFormat = "%p %c<%d>"
+	listFormat = "%p%c(%d)"
 	#The color to use for the dimension font if perDimColorPath is false.
 	#(In the event of a modded dimension being entered, this color will be used as a fallback)
 	#Allowed Values: DARK_RED, RED, GOLD, YELLOW, DARK_GREEN, GREEN, AQUA, DARK_AQUA, DARK_BLUE, BLUE, LIGHT_PURPLE, DARK_PURPLE, WHITE, GRAY, DARK_GRAY, BLACK
