fix(common): fix dough
feat(client): add new resourcepacks

--- a/src/server-overrides/server.properties
+++ b/src/server-overrides/server.properties
@@ -30,7 +30,7 @@ max-chained-neighbor-updates=1000000
 max-players=99
 max-tick-time=300000
 max-world-size=40000
-motd=\u00a7bKumo O Tagayasu Server \u00a7aVersion: \u00a7e7.3.0
+motd=\u00a7bKumo O Tagayasu Server \u00a7aVersion: \u00a7e5.3.0-rc.2
 network-compression-threshold=256
 online-mode=true
 op-permission-level=4
