--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           tag_name: "build-${{ env.BUILD_NUMBER }}"
           name: "Build ${{ env.BUILD_NUMBER }}"
-          prerelease：true
+          prerelease: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -38,5 +38,4 @@ jobs:
         with:
           tag_name: "build-${{ env.BUILD_NUMBER }}"
           files: "KumoOTagayasu-build-${{ env.BUILD_NUMBER }}.mrpack"
-          
 
