--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,12 +8,29 @@ on:
   pull_request:
     branches: [master]
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
+  json-validate:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: json-validate
+        id: json-validate
+        uses: GrantBirki/json-yaml-validate@v3.3.2 # replace with the latest version
+        with:
+          comment: "true"
+          base_dir: "src"
+
   build-and-release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set build number
         run: echo "BUILD_NUMBER=${{ github.run_number }}" >> $GITHUB_ENV
