--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,16 +75,15 @@ jobs:
           mkdir server
           mv "KumoOTagayasu-build-${BUILD_NUMBER}.mrpack" ./server
           cd server
-          mkdir mc
-          wget https://github.com/nothub/mrpack-install/releases/download/v0.16.10/mrpack-install-linux
-          chmod 755 mrpack-install-linux
-          ./mrpack-install-linux "KumoOTagayasu-build-${BUILD_NUMBER}.mrpack"
-          cd mc
           wget https://maven.minecraftforge.net/net/minecraftforge/forge/1.20.1-47.4.6/forge-1.20.1-47.4.6-installer.jar
           java -jar forge-1.20.1-47.4.6-installer.jar --installServer
+          wget https://github.com/nothub/mrpack-install/releases/download/v0.16.10/mrpack-install-linux
+          chmod 755 mrpack-install-linux
+          ./mrpack-install-linux "KumoOTagayasu-build-${BUILD_NUMBER}.mrpack" --server-dir ./ --server-file ./forge-1.20.1-47.4.6-installer.jar
+          rm -f mrpack-install-linux
           rm -f forge-1.20.1-47.4.6-installer.jar
           rm -f install.log
-          zip -r "../../Server-KumoOTagayasu-build-${BUILD_NUMBER}.zip" ./*
+          zip -r "../Server-KumoOTagayasu-build-${BUILD_NUMBER}.zip" ./*
           
       - name: Upload server file to release
         uses: softprops/action-gh-release@v1
