--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Create ZIP archive with build number
+      - name: Create mrpack archive
         run: |
           cd src
           zip -r "../KumoOTagayasu-build.mrpack" ./*
@@ -45,7 +45,7 @@ jobs:
       - name: Delete existing release assets
         uses: mknejp/delete-release-assets@v1
         with:
-          tag: “build”
+          tag: build
           assets: |
             KumoOTagayasu-build.mrpack
             Server-KumoOTagayasu-build.zip
