--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,17 +69,17 @@ jobs:
       - name: Build server
         run: |
           mkdir server
-          mv "KumoOTagayasu-build.mrpack" ./server
+          mv KumoOTagayasu-build.mrpack ./server
           cd server
-          wget https://maven.minecraftforge.net/net/minecraftforge/forge/1.20.1-47.4.6/forge-1.20.1-47.4.6-installer.jar
-          java -jar forge-1.20.1-47.4.6-installer.jar --installServer
-          wget https://github.com/nothub/mrpack-install/releases/download/v0.16.10/mrpack-install-linux
-          chmod 755 mrpack-install-linux
-          ./mrpack-install-linux "KumoOTagayasu-build.mrpack" --server-dir ./ --server-file ./forge-1.20.1-47.4.6-installer.jar
-          rm -f "KumoOTagayasu-build.mrpack"
-          rm -f mrpack-install-linux
+          wget https://github.com/nothub/mrpack-install/releases/download/v0.21.0-beta/mrpack-install_0.21.0-beta_linux_amd64.tar.gz
+          tar -xzf mrpack-install_0.21.0-beta_linux_amd64.tar.gz
+          chmod 755 mrpack-install
+          ./mrpack-install KumoOTagayasu-build.mrpack --server-dir ./
+          rm -f KumoOTagayasu-build.mrpack
+          rm -f mrpack-install_0.21.0-beta_linux_amd64.tar.gz
+          rm -f mrpack-install
           rm -f forge-1.20.1-47.4.6-installer.jar
-          rm -f install.log
+          rm -f forge-1.20.1-47.4.6-installer.jar.log
           zip -r "../Server-KumoOTagayasu-build.zip" ./*
           
       - name: Upload server file to release
