--- a/src/client-overrides/config/itlt-client.toml
+++ b/src/client-overrides/config/itlt-client.toml
@@ -6,7 +6,7 @@
 		# The name of your modpack.
 		# If blank, the modpack name will be auto-detected from supported launchers.
 		# This auto-detection isn't perfect, so you can override it here if needed.
-		modpackName = "Kumo O Tagayasu 5.3.0"
+		modpackName = "Kumo O Tagayasu 5.3.1"
 
 	[Display.WindowTitle]
 		# 
@@ -34,7 +34,7 @@
 		# - "ModpackName v2 based on %mc" = "ModpackName v2 based on Minecraft* 1.19.3"
 		# 
 		# Note: enableCustomWindowTitle must be enabled for this to take effect.
-		customWindowTitleText = "Kumo O Tagayasu 5.3.0"
+		customWindowTitleText = "%modpackName - %mc"
 
 	[Display.Icon]
 		# 
