--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,15 @@ jobs:
       - name: Create mrpack archive
         run: |
           cd src
+          cd client-overrides/BiliBiliMediaFiles
+
+          wget https://github.com/BtbN/FFmpeg-Builds/releases/download/latest/ffmpeg-n8.0-latest-win64-gpl-shared-8.0.zip
+          unzip ffmpeg-n8.0-latest-win64-gpl-shared-8.0.zip
+          mv ffmpeg-n8.0-latest-win64-gpl-shared-8.0/bin/ffmpeg.exe .
+          rm -f ffmpeg-n8.0-latest-win64-gpl-shared-8.0.zip
+          rm -rf ffmpeg-n8.0-latest-win64-gpl-shared-8.0
+
+          cd ../../
           zip -r "../KumoOTagayasu-build.mrpack" ./*
 
       - name: Delete existing release assets
