--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 forge-1.20.1-47.4.6-installer.jar
 mrpack-install-windows.exe
 mrpack-install-linux
+reference/
 
 # remove client config
 src/overrides/config/*client.toml 
