--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,7 +97,8 @@ jobs:
           rm -f mrpack-install
           rm -f forge-*-installer.jar
           rm -f forge-*-installer.jar.log
-          zip -r "../Server-KumoOTagayasu-build.zip" ./*
+          cd ../
+          zip -r "./Server-KumoOTagayasu-build.zip" ./server/*
           
       - name: Upload server file to release
         uses: softprops/action-gh-release@v1
@@ -106,3 +107,29 @@ jobs:
           files: "Server-KumoOTagayasu-build.zip"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Run Minecraft server and validate startup
+        run: |
+          cd server 
+          chmod +x run.sh
+
+          ./run.sh > server.log 2>&1 &
+          SERVER_PID=$!
+
+          echo "Test Server started with PID $SERVER_PID"
+
+          for i in {1..24}; do
+            if grep -q 'Done ([0-9.]\+s)! For help, type "help"' server.log; then
+              echo "Server started successfully"
+              sleep 5
+              exit 0
+            fi
+            if ! kill -0 $SERVER_PID 2>/dev/null; then
+              echo "Server process crashed"
+              exit 1
+            fi
+            sleep 10
+          done
+
+          echo "Server did not start successfully within timeout"
+          exit 1
