fix(server): 哦牛皮，还有能逃过启动检查的

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -124,8 +124,12 @@ jobs:
 
           for i in {1..30}; do
             if grep -q 'Done ([0-9.]\+s)! For help, type "help"' server.log; then
+              sleep 120
+              if ! kill -0 $SERVER_PID 2>/dev/null; then
+                echo "Server process crashed"
+                break
+              fi
               echo "Server started successfully"
-              sleep 5
               exit 0
             fi
             if ! kill -0 $SERVER_PID 2>/dev/null; then
