--- a/.pakku/server-overrides/config/voicechat/voicechat-server.properties
+++ b/.pakku/server-overrides/config/voicechat/voicechat-server.properties
@@ -44,7 +44,7 @@ force_voice_chat=false
 # Only relevant when 'force_voice_chat' is set to 'true'
 login_timeout=10000
 # The range in which the voice chat should broadcast audio
-# A value less than 0 means 'max_voice_distance
+# A value less than 0 means 'max_voice_distance'
 broadcast_range=-1.0
 # If the voice chat server should reply to external pings
 allow_pings=true
