--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,15 +51,15 @@ jobs:
         run: |
           cd .pakku/client-overrides/BiliBiliMediaFiles
 
-          wget https://github.com/BtbN/FFmpeg-Builds/releases/download/latest/ffmpeg-n8.0-latest-win64-lgpl-8.0.zip
-          unzip ffmpeg-n8.0-latest-win64-lgpl-8.0.zip
+          wget https://github.com/BtbN/FFmpeg-Builds/releases/download/latest/ffmpeg-n8.0-latest-win64-lgpl-8.0.zip >/dev/null 2>&1
+          unzip ffmpeg-n8.0-latest-win64-lgpl-8.0.zip >/dev/null 2>&1
           mv ffmpeg-n8.0-latest-win64-lgpl-8.0/bin/ffmpeg.exe .
           rm -f ffmpeg-n8.0-latest-win64-lgpl-8.0.zip
           rm -rf ffmpeg-n8.0-latest-win64-lgpl-8.0
 
           cd ../../../
           
-          wget https://github.com/juraj-hrivnak/Pakku/releases/download/v1.3.2/pakku.jar
+          wget https://github.com/juraj-hrivnak/Pakku/releases/download/v1.3.2/pakku.jar >/dev/null 2>&1
           chmod 755 pakku.jar
           java -jar pakku.jar export
 
