build: try to introduce installer 8

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,8 +93,6 @@ jobs:
           cp installer/install-server.sh ./install-server.sh 
           chmod +x install-server.sh
           ./install-server.sh 
-
-          zip -r "./Full-Server-KumoOTagayasu-build.zip" ./server/*
           
       - name: Run Minecraft server and validate startup
         run: |
@@ -115,7 +113,6 @@ jobs:
                 break
               fi
               echo "Server started successfully"
-              cd ../
               exit 0
             fi
             if ! kill -0 $SERVER_PID 2>/dev/null; then
@@ -126,6 +123,8 @@ jobs:
           done
 
           echo "Server did not start successfully within timeout or crashed"
+          echo "Show log:"
+          cat logs/latest.log
 
           if ls crash-reports/*.txt 1> /dev/null 2>&1; then
             echo "Crash reports found:"
@@ -134,11 +133,11 @@ jobs:
             echo "No crash reports found."
             cat logs/latest.log
           fi
-          cd ../
           exit 1
 
       - name: Package server files
         run: |
+          cd ../
           mkdir installer/.pakku
           cp pakku.json installer
           cp pakku-lock.json installer
@@ -147,13 +146,14 @@ jobs:
           cp -r .pakku/server-overrides/ installer/.pakku
 
           zip -r "Server-KumoOTagayasu-build.zip" ./installer/*
+          zip -r "./Full-Server-KumoOTagayasu-build.zip" ./server/*
 
       - name: Upload server file to release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: "build"
           files: |
-            "Server-KumoOTagayasu-build.zip" 
-            "Full-Server-KumoOTagayasu-build.zip"
+            Server-KumoOTagayasu-build.zip 
+            Full-Server-KumoOTagayasu-build.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
