--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,7 +92,8 @@ jobs:
         run: |
           cp installer/install-server.sh ./install-server.sh 
           chmod +x install-server.sh
-          ./install-server.sh 
+          ./install-server.sh
+          zip -r "./Full-Server-KumoOTagayasu-build.zip" ./server
 
       - name: Package server files
         run: |
@@ -100,10 +101,12 @@ jobs:
           cp pakku-lock.json installer/
           cp -r MCDR/ installer/
           cp -r .pakku/ installer/
+          rm -rf installer/.pakku/client-overrides/config/*
+          rm -rf installer/.pakku/client-overrides/mods/*
+          rm -rf installer/.pakku/client-overrides/BiliBiliMediaFiles
           
           shopt -s dotglob
-          zip -r "Server-KumoOTagayasu-build.zip" ./installer
-          zip -r "./Full-Server-KumoOTagayasu-build.zip" ./server
+          zip -r "./Server-KumoOTagayasu-build.zip" ./installer
           shopt -u dotglob
 
       - name: Upload server file to release
